cmake_minimum_required(VERSION 3.24)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm sum_and_multiple.cpp matrix.h graph.h)

add_executable(sum sum_and_multiple.cpp matrix.h)

add_executable(sum_and_multiple sum_and_multiple.cpp matrix.h)
add_executable(quicksort_and_mergesort quicksort_and_mergesort.cpp matrix.h)
add_executable(fib_and_hanoi fib.cpp matrix.h)
add_executable(hanoi hanoi.cpp matrix.h)
add_executable(fib fib.cpp matrix.h)
add_executable(matrix_multipul matrix_multipul.cpp matrix.h)
add_executable(chessboard chessboard.cpp matrix.h)
add_executable(max_and_min max_and_min.cpp matrix.h)
add_executable(secondSmallest secondSmallest.cpp matrix.h)
add_executable(kth_smallest kth_smallest.cpp matrix.h)
add_executable(closest_points closest_points.cpp matrix.h)
add_executable(FourierSeries FourierSeries.cpp matrix.h)
add_executable(circle_match circle_match.cpp matrix.h)
add_executable(binomisch_binomial binomisch_binomial.cpp matrix.h)
add_executable(shortest_route shortest_route.cpp)
add_executable(longest_route longest_route.cpp graph.h)
add_executable(Levenshtein Levenshtein.cpp)
add_executable(backpack_no_repeat backpack_no_repeat.cpp)
add_executable(knapsack_can_repeat knapsack_can_repeat.cpp)
add_executable(knapsack-no-repeat knapsack-no-repeat.cpp)
add_executable(consecutive_matrix_multiple consecutive_matrix_multiple.cpp)

add_executable(2409_days_together LeetCode/2409_days_together.cpp)
add_executable(5_longest_string LeetCode/5_longest_string.cpp)
add_executable(1026_max_diff LeetCode/1026_max_diff.cpp)
add_executable(1402_cook_sort LeetCode/1402_cook_sort.cpp)
add_executable(1043.max_sum_after_partitioning LeetCode/1043.max_sum_after_partitioning.cpp)
add_executable(1187.make_array_increasing LeetCode/1187.make_array_increasing.cpp)
add_executable(tsp tsp.cpp)
add_executable(test test.cpp)
add_executable(dfs dfs.cpp)
add_executable(dfs-not dfs-not.cpp)
add_executable(1 1.cpp)